src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Global styles for HTML elements */
h1 {
  @apply text-3xl font-bold text-gray-900 mb-4;
}

h2 {
  @apply text-2xl font-semibold text-gray-800 mb-3;
}
h3 {
  @apply text-lg font-bold text-gray-800 mb-3;
}

p {
  @apply text-gray-700 mb-3;
}

@media (min-width: 768px) {
  aside, main {
    height: calc(100vh - [HeaderHeight] - [FooterHeight]); /* Replace [HeaderHeight] and [FooterHeight] with actual values */
    overflow-y: auto;
  }
}
/* Add more global styles as needed */

